add css file and update html file with classes

--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>skyhouse</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
-		<div >
+	<div class="container" id="box">
+		<div id="div1">
 			<h3>კონტაქტი</h3>
 		    <p >lorem ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.</p>
 		</div>
 		<div>
-			<iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2980.431692538595!2d44.873303415298935!3d41.668019379239375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440f5fe07a5cd1%3A0xe8f2e0cd085ef770!2zU2t5IEhvdXNlIOKAoiDhg6Hhg6Xhg5Dhg5gg4YOw4YOQ4YOj4YOh4YOY!5e0!3m2!1ska!2sge!4v1670863184891!5m2!1ska!2sge" ></iframe>
+			<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2980.431692538595!2d44.873303415298935!3d41.668019379239375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440f5fe07a5cd1%3A0xe8f2e0cd085ef770!2zU2t5IEhvdXNlIOKAoiDhg6Hhg6Xhg5Dhg5gg4YOw4YOQ4YOj4YOh4YOY!5e0!3m2!1ska!2sge!4v1670863184891!5m2!1ska!2sge" ></iframe>
 		</div>
 		<div >
-			<div >
-			    <img  src="images/phone.png" alt="phone">
-			    <p >+995 555 444 333</p>
+			<div class="contact">
+			    <img class="icon" src="images/phone.png" alt="phone">
+			    <p class="icon">+995 555 444 333</p>
 		    </div>
-		    <div >
-			    <img  src="images/mail.png" alt="mail">
-			    <p>example@gmail.com</p>
+		    <div class="contact">
+			    <img class="icon1" src="images/mail.png" alt="mail">
+			    <p class="icon1">example@gmail.com</p>
 		    </div>
 		</div>  
 	</div>
-	<div>
+	<div class="container">
 		<form>
 		    <div>
 			     <label>სახელი,გვარი</label>
